...
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_play_arrow" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:ellipsize="end"
                android:maxLines="1"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@tools:sample/lorem/random[0]" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewDuration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@{String.format(`%02d:%02d:%02d`, preset.hours, preset.minutes, preset.seconds)}"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                app:layout_constraintEnd_toEndOf="@+id/textViewName"
...
